[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meshagent-commoncrawl"
description = "Common Crawl import support for Meshagent datasets"
dynamic = ["version", "readme"]
requires-python = ">=3.13"
license = "Apache-2.0"
dependencies = [
  "datafusion~=52.0.0",
  "pytest~=8.4",
  "pytest-asyncio~=0.26",
  "meshagent-api==0.41.4",
  "pyarrow~=21.0.0",
  "warcio~=1.7",
]

[project.urls]
Documentation = "https://docs.meshagent.com"
Website = "https://www.meshagent.com"
Source = "https://www.meshagent.com"

[tool.setuptools.packages.find]
include = ["meshagent.*"]

[tool.setuptools.package-data]
"meshagent.commoncrawl" = ["py.typed", "*.pyi", "**/*.pyi"]

[tool.setuptools.dynamic]
version = {attr = "meshagent.commoncrawl.version.__version__"}
readme = { file = "README.md", content-type = "text/markdown" }
